# CS-Course-Recommender

./: .gitmodules  CMakeLists.txt  README.md
db/: breadthCourses.csv  computerScienceClasses.csv  difficultyDatabase.csv
include/: CourseRecommender.h  DataTable.h  SQL.h  UI.h  loginSystem.h
lib/: CourseRecommender.cpp  DataTable.cpp  SQL.cpp  UI.cpp  courseDifficultyCSV.csv  loginSystem.cpp  main.cpp
sqlite3/: CMakeLists.txt
tests/: CourseRecommenderTest.h  DataTableTest.h  Instantiation.h  LoginSystemTest.h  SQLTest.h  UIMenuTest.h  UnitTests.cpp
